--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk&callback=onloadPopulate(domainsList)&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk&callback=onloadPopulate&libraries=&v=weekly"
     ></script>
   </head>
   <body><!--</body> onload="onloadPopulate(domainsList)">-->
