--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="style.css" />
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk&callback=onloadPopulate&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk"
     ></script>
   </head>
-  <body><!--</body> onload="onloadPopulate(domainsList)">-->
+  <body onload="onloadPopulate(domainsList)">
     <div id="content">
       <h1 id="title">
         How Many Bobas Could Matt Have Bought With the Money He Spent on
