Formattt, refactor, comment.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk"
-    ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk"></script>
   </head>
   <body onload="onloadPopulate(domainsList)">
     <div id="content">
