--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <script src="domains.js"></script>
+    <script src="sales_tax_rates.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk"></script>
