Conversion rate stuff.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     />
     <script src="domains.js"></script>
     <script src="sales_tax_rates.js"></script>
+    <script src="country_to_currency.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIfXhMxXV5ZX8Jd0Gbiq59mEZyR0A8pXk"></script>
   </head>
-  <body onload="onloadPopulate(domainsList)">
+  <body onload="onloadPopulate()">
     <div id="content">
       <h1 id="title">
         How Many Bobas Could Matt Have Bought With the Money He Spent on
