Added custom ui

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         Domains?
       </h1>
       <div id="total-cost"></div>
+      <div id="custom-boba"></div>
       <div id="cost-breakdown"></div>
     </div>
   </body>
