--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="components/bobaCard.js"></script>
+    <script src="components/totalCost.js"></script>
+    <script src="components/bobaMaker.js"></script>
     <script src="domains.js"></script>
     <script src="sales_tax_rates.js"></script>
     <script src="country_to_currency.js"></script>
